# humangl

./: CMakeLists.txt  Makefile  result.txt
includes/: Animation.hpp  BodyPart.hpp  BodyParts.hpp  Button.hpp  Camera.hpp  Head.hpp  LowerArm.hpp  LowerLeg.hpp  Matrix.hpp  Mesh.hpp  Shader.hpp  Torso.hpp  UpperArm.hpp  UpperLeg.hpp  Vertex.hpp  Window.hpp  gltext.h
includes/glad/: glad.h
shaders/: MainWVertex.glsl  SettingsWFragment.glsl  SettingsWVertex.glsl  fragment.glsl  vertex.glsl
src/: Animation.cpp  BodyPart.cpp  BodyParts.cpp  Button.cpp  Camera.cpp  Head.cpp  LowerArm.cpp  LowerLeg.cpp  Matrix.cpp  Mesh.cpp  Settings.cpp  Shader.cpp  Torso.cpp  UpperArm.cpp  UpperLeg.cpp  Vertex.cpp  Window.cpp  glad.cpp  main.cpp
src/Animations/: Crouch.cpp  Flex.cpp  Jump.cpp  TPose.cpp  Walking.cpp
